--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,14 @@
 ---
 layout: default
 ---
+
 <h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<p id="published-date">{{ page.date | date_to_string }}</p>
 
 {{ content }}
+
+<ul id="tags">
+	{% for tag in page.tags %}
+		<li>{{ tag }}</li>
+	{% endfor %}
+</ul>
