add Sitelen Pona (via [Linja Lipamanka]) to Toki Pona content
...and add a Colophon page, for credit where credit is due

[Linja Lipamanka]: https://lipamanka.gay/linjamanka

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,17 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}";
 @import "minimal-mistakes";
 
+@font-face {
+	font-family: linja-lipamanka;
+	src: url('https://lipamanka.gay/linjalipamanka-normal.otf') format('opentype');
+  line-height: 1.1em;
+}
+.font-lipamanka {
+  font: 1.5em linja-lipamanka;
+  margin: 1em 0;
+}
+
+
 // disable transitions added by minimal-mistakes
 html * { transition: none; -webkit-transition: none; }
 
