minor tweaks to Dough Ratio Calculator

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,6 +24,7 @@ html * { transition: none; -webkit-transition: none; }
 #dough-ratio-calculator {
   display: flex;
   flex-flow: column wrap;
+  max-height: 50vh;
   align-items: flex-start;
   box-shadow: 1px 2px 5px #FFFa inset;
   border-radius: 1rem;
