lipu-pi-nasin-sewi: sidebar nav

--- a/_includes/kipisi-nav.html
+++ b/_includes/kipisi-nav.html
@@ -12,7 +12,7 @@
   {% endif %}
   <a href="index" title="kipisi ale">kipisi ale</a>
   {% if include.num != 81 %}
-    <a href="{{ include.num | plus: 1 }}" title="kipisi monsi la: kipisi nanpa {{ next_text }}">kipisi nanpa {{ next_text }}</a>
+    <a href="{{ include.num | plus: 1 }}" title="kipisi sinpin la: kipisi nanpa {{ next_text }}">kipisi nanpa {{ next_text }}</a>
   {% endif %}
 </nav>
 
