ante-kulupu-so: `lang` attr; try more fonts

--- a/_includes/sitelen-sitelen-renderer.html
+++ b/_includes/sitelen-sitelen-renderer.html
@@ -1,4 +1,4 @@
-[Sitelen Sitelen Renderer](http://livingtokipona.smoishele.com/examples/liveinput/liveinput.html) by [Olaf Janssen](https://github.com/olafjanssen)
+[Sitelen Sitelen Renderer](http://livingtokipona.smoishele.com/examples/liveinput/liveinput.html) by [Olaf Janssen](https://github.com/olafjanssen).
 
 {% include sitelen-sitelen.js %}
 
