ante-kulupu-so: more

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,12 +9,12 @@
 
 @font-face {
   font-family: tp-fairfax;
-  src: url('https://raw.githubusercontent.com/kreativekorp/open-relay/master/FairfaxHD/FairfaxHD.ttf') format('ttf');
+  src: url('https://raw.githubusercontent.com/kreativekorp/open-relay/3326b936d7bc0b83aaef5a84c715e6a53070fb78/Fairfax/Fairfax.ttf') format('truetype');
   line-height: 1.1em;
 }
 @font-face {
   font-family: tp-sitelenselikiwen;
-  src: url('https://raw.githubusercontent.com/kreativekorp/sitelen-seli-kiwen/main/sitelenselikiwenjuniko.ttf') format('ttf');
+  src: url('https://raw.githubusercontent.com/kreativekorp/sitelen-seli-kiwen/e964709/main/sitelenselikiwenasuki.ttf') format('truetype');
   line-height: 1.1em;
 }
 @font-face {
