--- a/_includes/kipisi-nav.html
+++ b/_includes/kipisi-nav.html
@@ -20,11 +20,16 @@
   .kipisi-nav {
     display: flex;
     flex-flow: row nowrap;
-    margin: 2em auto;
-    max-width: 30em;
+    max-width: 30rem;
+    margin: 2rem auto;
+    padding: 0.5rem;
+    box-shadow: 0 0 0.5rem 0.3rem rgba(99, 99, 99, 0.5);
+    background: rgba(99, 99, 99, 0.5);
+    border-radius: 2rem;
   }
   .kipisi-nav a {
     display: inherit;
     flex: 1;
+    justify-content: space-around;
   }
 </style>
