--- a/_includes/sitelen-sitelen-renderer.html
+++ b/_includes/sitelen-sitelen-renderer.html
@@ -9,10 +9,21 @@
     align-items: flex-start;
     justify-content: space-around;
     width: 100%;
+    padding: 1rem;
+    /* background: pink; */
+  }
+  p[data-sitelen] {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin: 0 0 1rem;
+  }
+  p[data-sitelen-ratio^="0."] > svg,
+  p[data-sitelen-ratio ="1" ] > svg,
+  p[data-sitelen-ratio^="1."] > svg {
+    flex-basis: 50%;
     padding: 0;
-    background: #eeea;
-    > * {
-      max-width: 7rem;
-    }
   }
 </style>
+
+{:sitelen: data-sitelen="true"}
