--- a/_includes/sitelen-sitelen-renderer.html
+++ b/_includes/sitelen-sitelen-renderer.html
@@ -3,25 +3,22 @@
 {% include sitelen-sitelen.js %}
 
 <style>
-  ul[data-sitelen] {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: flex-start;
-    justify-content: space-around;
-    width: 100%;
-    padding: 1rem;
-    /* background: pink; */
-  }
+  ul[data-sitelen] { background: pink; }
   p[data-sitelen] {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     margin: 0 0 1rem;
   }
-  p[data-sitelen-ratio^="0."] > svg,
-  p[data-sitelen-ratio ="1" ] > svg,
-  p[data-sitelen-ratio^="1."] > svg {
-    flex-basis: 50%;
+
+  [data-sitelen] > svg {
+    max-height: calc(min(75vh, 90%));
+    max-width: calc(min(75vw, 90%));
+  }
+  [data-sitelen-ratio^="0."] > svg,
+  [data-sitelen-ratio ="1" ] > svg,
+  [data-sitelen-ratio^="1."] > svg {
+    /* flex-basis: 50%; */
     padding: 0;
   }
 </style>
