--- a/_layouts/lipu-pi-nasin-sewi.html
+++ b/_layouts/lipu-pi-nasin-sewi.html
@@ -27,9 +27,17 @@ classes: wide
     padding: 0.5rem;
     text-align: center;
   }
+
+  .lpns {
+    /* display: flex; */
+    /* flex-flow: row wrap; */
+  }
+  .lpns > * {
+    /* flex-basis: 100%; */
+  }
   .lpns > table {
-    display: table;
-    font-size: 0.9em; /* otherwise set to 0.75 */
+    display: table; /* reset silly defaults */
+    font-size: 0.9em; /* reset silly defaults */
   }
   .lpns > table td {
     padding: 0.1rem;
@@ -44,6 +52,12 @@ classes: wide
     white-space: nowrap;
     font: 2em zh-FangZhengXiaoZhuanTi, zh-JinWen, cursive, fantasy; /* em not rem... */
     letter-spacing: -0.3em; /* em not rem... */
+  }
+  #sitelen {
+    border: 0;
+  }
+  #sitelen ~ p[data-sitelen] {
+    /* float: left; */
   }
   h2 {
     border-bottom: 0;
