lipu-nasin-sewi: more progress

--- a/_layouts/lipu-pi-nasin-sewi.html
+++ b/_layouts/lipu-pi-nasin-sewi.html
@@ -9,11 +9,11 @@ title: lipu {{lipu}} la, kipisi nanpa {{nanpa}} • lipu Nasin Sewi
 <h2>Acknowledgements</h2>
 
 <ul>
-  <li>ancient Chinese original by (traditionally) <a href="https://en.wikipedia.org/wiki/Laozi" title="Lao Zi page on Wikipedia" target="_blank" rel="noopener">LaoZi</a>, circa 400 <small><abbr title="before common era">BCE</abbr></small></li>
-  <li><a href="http://www.acmuller.net/con-dao/daodejing.html" target="_blank rel="noopener"">English interpretation by A. Charles Muller</a>, July 1991 [<a href="https://web.archive.org/web/20230722070128/http://www.acmuller.net/con-dao/daodejing.html" target="_blank rel="noopener"">archived</a>]</li>
-  <li>partially inspired by <a href="http://www.beatrice.com/TAO.txt" target="_blank rel="noopener"">another English interpretation by Ron Hogan</a>, 2002–2004 [<a href="https://web.archive.org/web/20230327014826/http://www.beatrice.com/TAO.txt" target="_blank rel="noopener"">archived</a>]</li>
-  <li><a href="https://discord.com/invite/mapona" target="_blank rel="noopener"">ma pona pi toki pona</a> en <a href="https://discord.gg/KCfMszsf54" target="_blank" rel="noopener">kama sona</a> la, kulupu ni pi ilo Siko li pona tawa mi a!</li>
+  <li>ancient Chinese original by (traditionally) <a href="https://en.wikipedia.org/wiki/Laozi" title="Lao Zi page on Wikipedia" target="_blank" rel="noopener">LaoZi</a>, circa 400 <small><abbr title="before common era">BCE</abbr></small>; text from <a href="https://ctext.org/dao-de-jing" target="_blank" rel="noopener">ctext.org</a></a>
+  <li><a href="http://www.acmuller.net/con-dao/daodejing.html" target="_blank" rel="noopener">English interpretation by A. Charles Muller</a>, July 1991 [<a href="https://web.archive.org/web/20230722070128/http://www.acmuller.net/con-dao/daodejing.html" target="_blank" rel="noopener">archived</a>]</li>
+  <li>partially inspired by <a href="http://www.beatrice.com/TAO.txt" target="_blank" rel="noopener">another English interpretation by Ron Hogan</a>, 2002–2004 [<a href="https://web.archive.org/web/20230327014826/http://www.beatrice.com/TAO.txt" target="_blank" rel="noopener">archived</a>]</li>
   <li><a href="https://tokipona.org" target="_blank" rel="noopener">Toki Pona</a> was invented by Sonja Lang</li>
+  <li><a href="https://discord.com/invite/mapona" target="_blank" rel="noopener">ma pona pi toki pona</a> en <a href="https://discord.gg/KCfMszsf54" target="_blank" rel="noopener">kama sona</a> la, kulupu ni pi ilo Siko li pona tawa mi a!</li>
   <li>the <a href="https://www.jonathangabel.com/toki-pona" target="_blank" rel="noopener">Sitelen Sitelen or Sitelen Suwi</a> writing system was invented by <a href="https://www.jonathangabel.com">Jonathan Gabel</a></li>
   <li>Chinese fonts are from <a href="https://chinesefontdesign.com" target="_blank" rel="noopener">chinesefontdesign.com</a></li>
 </ul>
