lipu-pi-nasin-sewi: big update... fix lots of typos...

--- a/_layouts/lipu-pi-nasin-sewi.html
+++ b/_layouts/lipu-pi-nasin-sewi.html
@@ -1,7 +1,6 @@
 ---
 layout: single
 classes: wide
-title: lipu {{lipu}} la, kipisi nanpa {{nanpa}} • lipu Nasin Sewi
 ---
 
 <div class="lpns">{{ content }}</div>
@@ -45,7 +44,7 @@ title: lipu {{lipu}} la, kipisi nanpa {{nanpa}} • lipu Nasin Sewi
   }
   .loseta td:nth-child(1) { /* source text */
     white-space: nowrap;
-    font: 2em zh-FangZhengXiaoZhuanTi, zh-JinWen, cursive, fantasy; /* em not rem... */
+    font: 2em zh-FangZhengXiaoZhuanTi, zh-EBAS, zh-JinWen, cursive, fantasy; /* em not rem... */
     text-align: left;
     letter-spacing: -0.3em; /* em not rem... */
   }
