lipu-pi-nasin-sewi: WIP

--- a/_layouts/lipu-pi-nasin-sewi.html
+++ b/_layouts/lipu-pi-nasin-sewi.html
@@ -18,6 +18,9 @@ classes: wide
 </ul>
 
 <style>
+  .sidebar > h3 {
+    display: none;
+  }
   .sidebar > ul.kipisi-nav-sidebar {
     display: flex;
     flex-flow: row wrap;
