lipu-nasin-pona: use "kasi" for page/chapter
rather than "kipisi"

--- a/_layouts/lipu-nasin-pona.html
+++ b/_layouts/lipu-nasin-pona.html
@@ -21,18 +21,18 @@ classes: wide
   .sidebar > h3 {
     display: none;
   }
-  .sidebar > ul.kipisi-nav-sidebar {
+  .sidebar > ul.kasi-nav-sidebar {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     list-style: none;
     padding: 0;
   }
-  .sidebar > ul.kipisi-nav-sidebar li {
+  .sidebar > ul.kasi-nav-sidebar li {
     flex-basis: 9em;
     margin: 0 0.5em 0.5em;
   }
-  .sidebar > ul.kipisi-nav-sidebar a {
+  .sidebar > ul.kasi-nav-sidebar a {
     display: block;
     padding: 0.5rem;
     text-decoration: none;
