--- a/_includes/kasi-nav.html
+++ b/_includes/kasi-nav.html
@@ -8,11 +8,11 @@
 
 <nav class="kipisi-nav">
   {% if include.num != 1 %}
-    <a href="{{ include.num | minus: 1 }}" title="kipisi monsi la: kipisi nanpa {{ prev_text }}">kipisi nanpa {{ prev_text }}</a>
+    <a href="{{ include.num | minus: 1 }}" title=" monsi la: kasi nanpa {{ prev_text }}">kasi nanpa {{ prev_text }}</a>
   {% endif %}
-  <a href="index" title="kipisi ale">kipisi ale</a>
+  <a href="index" title="kasi ale">kasi ale</a>
   {% if include.num != 81 %}
-    <a href="{{ include.num | plus: 1 }}" title="kipisi sinpin la: kipisi nanpa {{ next_text }}">kipisi nanpa {{ next_text }}</a>
+    <a href="{{ include.num | plus: 1 }}" title="kasi sinpin la: kasi nanpa {{ next_text }}">kasi nanpa {{ next_text }}</a>
   {% endif %}
 </nav>
 
