new post: Cypress component tests with SvelteKit/Svelte v5

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -78,6 +78,8 @@
 html * { transition: none; -webkit-transition: none; }
 html table { font-size: inherit; }
 html dd { font-size: inherit; }
+a > code::before { content: '' !important; }
+a > code::after { content: '' !important; }
 
 
 #dough-ratio-calculator { /* TODO move this */
